[package]
name = "cumulus-network"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2018"

[dependencies]
# substrate deps
sp-blockchain = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-consensus = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-runtime = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-core = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }

# polkadot deps
polkadot-collator = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }
polkadot-primitives = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }
polkadot-statement-table = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }
polkadot-validation = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }
polkadot-network = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }

# cumulus deps
cumulus-primitives = { path = "../primitives" }

# other deps
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
parking_lot = "0.10.2"

[dev-dependencies]
cumulus-test-runtime = { path = "../test/runtime" }

# substrate deps
sc-client-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-core = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-keyring = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }

# polkadot deps
polkadot-test-runtime-client = { git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch" }
