[package]
name = "cumulus-network"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2018"

[dependencies]
# substrate deps
sp-blockchain = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-consensus = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-runtime = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-api = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-core = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }

# polkadot deps
polkadot-collator = { git = "https://github.com/cheme/polkadot-1", branch = "rococo-branch-witness_backend" }
polkadot-primitives = { git = "https://github.com/cheme/polkadot-1", branch = "rococo-branch-witness_backend" }
polkadot-statement-table = { git = "https://github.com/cheme/polkadot-1", branch = "rococo-branch-witness_backend" }
polkadot-validation = { git = "https://github.com/cheme/polkadot-1", branch = "rococo-branch-witness_backend" }
polkadot-network = { git = "https://github.com/cheme/polkadot-1", branch = "rococo-branch-witness_backend" }

# cumulus deps
cumulus-primitives = { path = "../primitives" }

# other deps
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
parking_lot = "0.10.2"

[dev-dependencies]
cumulus-test-runtime = { path = "../test/runtime" }

# substrate deps
sc-client-api = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-core = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-keyring = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }

# polkadot deps
polkadot-test-runtime-client = { git = "https://github.com/cheme/polkadot-1", branch = "rococo-branch-witness_backend" }
