[package]
name = "cumulus-parachain-upgrade"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "pallet to manage parachain upgrades"

[dependencies]
# Cumulus dependencies
cumulus-primitives = { path = "../primitives", default-features = false }
cumulus-runtime = { path = "../runtime", default-features = false }

# Polkadot dependencies
parachain = { package = "polkadot-parachain", git = "file:///home/cecile/repos/polkadot", branch = "rococo-branch", default-features = false }

# Substrate dependencies
frame-support = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
pallet-balances = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-core = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", version = "2.0.0-rc5", default-features = false }
sp-inherents = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-io = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-std = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-runtime = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-version = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
frame-system = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }

# Other Dependencies
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"]}
serde = { version = "1.0.101", optional = true, features = ["derive"] }

[dev-dependencies]
sp-externalities = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
substrate-test-runtime-client = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-version = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'pallet-balances/std',
	'cumulus-runtime/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-std/std',
	'frame-system/std',
	'cumulus-primitives/std',
]
