[package]
name = "cumulus-parachain-upgrade"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "pallet to manage parachain upgrades"

[dependencies]
# Cumulus dependencies
cumulus-primitives = { path = "../primitives", default-features = false }
cumulus-runtime = { path = "../runtime", default-features = false }

# Polkadot dependencies
parachain = { package = "polkadot-parachain", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", version = "2.0.0-rc5", default-features = false, branch = "rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }

# Other Dependencies
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"]}
serde = { version = "1.0.101", optional = true, features = ["derive"] }
hash-db = { version = "0.15.2", default-features = false }

[dev-dependencies]
sp-externalities = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
cumulus-test-relay-sproof-builder = { path = "../test/relay-sproof-builder" }

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'pallet-balances/std',
	'cumulus-runtime/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-std/std',
	'hash-db/std',
	'sp-state-machine/std',
	'sp-trie/std',
	'frame-system/std',
	'cumulus-primitives/std',
]
